RESOLVED FIXED278705
[GStreamer][WebRTC] Fix getStats() call leading to crash
https://bugs.webkit.org/show_bug.cgi?id=278705
Summary [GStreamer][WebRTC] Fix getStats() call leading to crash
Philippe Normand
Reported 2024-08-27 01:17:44 PDT
^^
Attachments
Philippe Normand
Comment 1 2024-08-27 01:19:05 PDT
EWS
Comment 2 2024-08-27 01:50:57 PDT
Committed 282780@main (d90a119ac846): <https://commits.webkit.org/282780@main> Reviewed commits have been landed. Closing PR #32621 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-27 01:51:15 PDT
Note You need to log in before you can comment on or make changes to this bug.