Cherry-pick 282780@main (d90a119ac846). https://bugs.webkit.org/show_bug.cgi?id=278705

[GStreamer][WebRTC] Fix getStats() call leading to crash
    https://bugs.webkit.org/show_bug.cgi?id=278705

    Reviewed by Xabier Rodriguez-Calvar.

    Check the GstBin associated to the receiver's RealtimeIncomingSource is not null before attempting
    to get its sink pad. This fixes crashes in the webrtc/video-stats.html and
    imported/w3c/web-platform-tests/webrtc-extensions/RTCRtpReceiver-jitterBufferTarget-stats.html tests.

    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
    (WebCore::GStreamerMediaEndpoint::getStats):

    Canonical link: https://commits.webkit.org/282780@main